--- a/myapp/src/App.css
+++ b/myapp/src/App.css
@@ -2,7 +2,7 @@
 
 body {
   font-family: 'Noto Sans KR', sans-serif;
-  background-color: rgb(150, 209, 148);
+  background-color: #AAA2C2;
   margin: 50px;
 
 }
@@ -39,15 +39,16 @@ body {
 .login:focus,
 .login:hover {
   outline: none;
-  border-bottom-color: rgb(68, 112, 67);
+  border-bottom-color: #6A679E;
 }
 
 .btn {
   border: none;
   width: 75%;
-  background-color: rgb(68, 112, 67);
+  background-color: #6A679E;
   color: white;
   padding: 15px 0;
+  margin-left: 5px;
   font-weight: 600;
   border-radius: 5px;
   cursor: pointer;
@@ -55,5 +56,129 @@ body {
 }
 
 .btn:hover {
-  background-color: rgb(49, 82, 48);
+  background-color: #595787;
+}
+
+ul {
+  list-style:none;
+  margin:0;
+  padding:0;
+}
+
+li {
+  margin:0 0 0 0;
+  padding:0 0 0 0;
+  border: 0;
+  float: left;
+}
+
+.search {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background-color: none;
+  height: auto;
+  width: 90%;
+  max-width: 1024px;
+  padding: 10px;
+  margin: 0 auto;
+  text-align: center;
+}
+
+.searchRow {
+  background-color: none;
+  align-items: center;
+  height: auto;
+  width: 90%;
+  max-width: 1024px;
+  padding: 10px;
+  margin-bottom: 30px;
+  text-align: center;
+  display: flex;
+}
+
+.searchText {
+  border: none;
+  border-bottom: 2px solid #D1D1D4;
+  background: #D1D1D4;
+  padding: 15px;
+  font-weight: 700;
+  transition: .2s;
+  width: 650px;
+  border-radius: 5px;
+  margin-left: 30px;
+}
+
+.searchBtn {
+  border: none;
+  width: 150px;
+  background-color: #6A679E;
+  color: white;
+  padding: 15px 0;
+  margin-left: 5px;
+  font-weight: 600;
+  border-radius: 5px;
+  cursor: pointer;
+  transition: .2s;
+}
+
+.done {
+  text-align: end;
+  margin-right: 40px;
+}
+
+.button-list {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.custom-button {
+  padding: 10px 20px;
+  margin: 5px;
+  background-color: #6A679E;
+  color: #fff;
+  border: none;
+  border-radius: 4px;
+  font-size: 16px;
+  cursor: pointer;
+}
+
+.custom-button:hover {
+  background-color: #6A679E;
+}
+
+.custom-button:focus {
+  outline: none;
+}
+
+
+.image-button-list {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  margin-top: 20px;
+  margin-bottom: 20px;
+}
+
+.image-button {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin: 10px;
+  border: none;
+  background: none;
+  cursor: pointer;
+}
+
+.image-button img {
+  width: 100px;
+  height: 100px;
+  object-fit: cover;
+  border-radius: 50%;
+}
+
+.image-button span {
+  margin-top: 5px;
 }
